# Agentic-AI

agent_as_tool/: pyproject.toml
agent_as_tool/src/agent_as_tool/: main.py
guardrails/basic/: pyproject.toml
guardrails/basic/src/basic/: main.py
guardrails/streaming/: pyproject.toml
guardrails/streaming/src/streaming/: main.py
guardrails/zm/: pyproject.toml
guardrails/zm/src/zm/: __init__.py  main.py
openai/basic-agents/: pyproject.toml
openai/basic-agents/src/basic_agents/: hello.py
practice/: README.md  pyproject.toml
practice-2/: pyproject.toml
practice-2/src/practice_2/: __init__.py  main.py
practice/src/practice/: main.py
weather/weather_update/: pyproject.toml
weather/weather_update/src/weather_update/: __init__.py  agent.py  chatbot.py
