[project]
name = "agent-as-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "areeejabbasii", email = "areejabbasi534@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.19",
]

[project.scripts]
agent-as-tool = "agent_as_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
