[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "areeejabbasii", email = "areejabbasi534@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.19",
]

[project.scripts]
practice = "practice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
