[project]
name = "basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "areeejabbasii", email = "areejabbasi534@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.0.19",
]

[project.scripts]
basic = "basic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
