[project]
name = "basic-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "areeejabbasii", email = "areejabbasi534@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.13",
]

[project.scripts]
basic-agents = "basic_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
